Filter can now be turn on and off for the user his exercises Requested by @Erazerbrecht Still little big, transition isn't fluid of the collapse in --> needs fixing not today. If someone wants to do it, go for it!

--- a/Codegenie_NodeJS/Codegenie_NodeJS/public/stylesheets/form.css
+++ b/Codegenie_NodeJS/Codegenie_NodeJS/public/stylesheets/form.css
@@ -33,3 +33,7 @@
 .right-30{
     margin-right: 30px;
 }
+
+.bottom-30{
+    margin-bottom: 30px;
+}
